--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+		"facebook/php-sdk-v4" : "4.0.*",
+		"welderlourenco/laravel-facebook" : "dev-master"
 	},
 	"autoload": {
 		"classmap": [
@@ -15,10 +17,7 @@
 			"app/database/seeds",
 			"app/tests/TestCase.php",
             "app/libraries"
-		],
-		"psr-4": {
-			"widgets\\": "app/controllers/widgets"
-		}
+		]
 	},
 	"scripts": {
 		"post-install-cmd": [
